--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,7 +2,7 @@
 	<div class="footer-social">
 		<div class="footer-container clearfix">
 			<div class="social-list">
-	 <a class="social segmentfault" target="blank" href="https://segmentfault.com/u/liberxue" title="访问 LiberXue_Twitter" data-hover="Segmentfault">Segmentfault</a>
+	 <a class="social sinaweibo" target="blank" href="https://weibo.com/u/2924045055" title="访问 INJNainggolan_Twitter" data-hover="sinaweibo">sinaweibo</a>
     <a class="social github" target="blank" href="https://github.com/liberxue" title="访问 LiberXue_Twitter" data-hover="GitHub">GitHub</a>
     <a class="social twitter" target="blank" href="http://twitter.com/liberxue" title="访问 LiberXue_Twitter" data-hover="Twitter">Twitter</a>
      <a class="social stackoverflow" target="blank" href="https://stackoverflow.com/users/6902190/liberxue" title="访问 LiberXue_stackoverflow" data-hover="StackOverflow">StackOverflow</a>
