更新了一系列网址

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,12 +2,12 @@
 	<div class="footer-social">
 		<div class="footer-container clearfix">
 			<div class="social-list">
-	 <a class="social sinaweibo" target="blank" href="https://weibo.com/u/2924045055" title="访问 INJNainggolan_Twitter" data-hover="sinaweibo">sinaweibo</a>
-    <a class="social github" target="blank" href="https://github.com/liberxue" title="访问 LiberXue_Twitter" data-hover="GitHub">GitHub</a>
-    <a class="social twitter" target="blank" href="http://twitter.com/liberxue" title="访问 LiberXue_Twitter" data-hover="Twitter">Twitter</a>
-     <a class="social stackoverflow" target="blank" href="https://stackoverflow.com/users/6902190/liberxue" title="访问 LiberXue_stackoverflow" data-hover="StackOverflow">StackOverflow</a>
-          <a class="social oschina" target="blank" href="https://my.oschina.net/bolanzw" title="访问 LiberXue_Oschina" data-hover="Oschina">Oschina</a>
-     <a class="social rss" target="blank" href="/feed.xml"title="访问 LiberXue_RSS" data-hover="RSS">RSS</a>
+	 <a class="social sinaweibo" target="blank" href="https://weibo.com/u/2924045055" title="访问 INJNainggolan_weibo" data-hover="sinaweibo">sinaweibo</a>
+    <a class="social github" target="blank" href="https://github.com/INJNainggolan" title="访问 INJNainggolan_github" data-hover="GitHub">GitHub</a>
+    <a class="social zhihu" target="blank" href="http://zhihu.com/" title="访问 INJNainggolan_zhihu" data-hover="zhihu">zhihu</a>
+     <a class="social baidu" target="blank" href="https://baidu.com" title="访问 baidu" data-hover="Baidu">Baidu</a>
+          <a class="social jianshu" target="blank" href="https://www.jianshu.com/u/88842db7127b" title="访问 INJNainggolan_jianshu" data-hover="Jianshu">Jianshu</a>
+     <a class="social rss" target="blank" href="/feed.xml"title="访问 INJNainggolan_RSS" data-hover="RSS">RSS</a>
 	</div>
 		</div>
 	</div>
