--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,7 +2,7 @@
        <div class="lists-navigator clearfix">   
          <ol class="page-navigator">
         <li class="current">
-            <a href="/?liberxue" data-hover="首页">
+            <a href="/?INJNainggolan" data-hover="首页">
                 <span>首页</span>
             </a>
         </li>
@@ -13,7 +13,7 @@
             {% if paginator.previous_page == 1 %}
             <a href="/INJNainggolanpage/?INJNAinggolan">
             {% else %}
-            <a href="/liberxuepage{{ paginator.previous_page }}?liberxue" >
+            <a href="/INJNainggolanpage{{ paginator.previous_page }}?INJNainggolan" >
             {% endif %}
                 <span>&laquo;</span>
             </a>
@@ -26,9 +26,9 @@
         <li>
             {% endif %}
             {% if i == 1 %}
-            <a href="/?liberxue" data-hover="{{i}}">{{i}}</a>
+            <a href="/?INJNainggolan" data-hover="{{i}}">{{i}}</a>
             {% else %}
-            <a href="/liberxuepage{{i}}?liberxue" data-hover="{{i}}">{{i}}</a>
+            <a href="/INJNainggolanpage{{i}}?INJNainggolan" data-hover="{{i}}">{{i}}</a>
             {% endif %}
         </li>
         {% endfor %}
@@ -36,13 +36,13 @@
             {% if paginator.page == paginator.total_pages %}
             <span>&raquo;</span>
             {% else %}
-            <a href="/liberxuepage{{ paginator.next_page }}?liberxue" data-hover="&raquo;">
+            <a href="/INJNainggolanpage{{ paginator.next_page }}?INJNainggolan" data-hover="&raquo;">
                 <span>&raquo;</span>
             </a>
             {% endif %}
         </li>
         <li>
-            <a href="/liberxuepage{{paginator.total_pages}}?liberxue" data-hover="末页">
+            <a href="/INJNainggolanpage{{paginator.total_pages}}?INJNainggolan" data-hover="末页">
                 <span>末页</span>
             </a>
         </li>
