--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -20,7 +20,7 @@
                     <div class="info-text">
                         <p>Theme is <a href="http://www.liberxue.com/2017/08/03/Jekyllthemes.html" title="访问 Jekyll INJNainggolan主题"  data-hover="Jekyll INJNainggolan"target="_blank">Jekyll INJNainggolan</a> by <a href="http://www.INJNainggolan.com/about" target="_blank">INJNainggolan</a></p>
                         <p>Powered by <a href="{{ site.url }}/tags/#Jekyll" title="Jekyll" data-hover="Jekyll" target="_blank" rel="nofollow">Jekyll</a></p>
-                        <p>&copy; 2017 <a href="/feed.xml"  title="访问 liberxue blog RSS" data-hover="liberxue blog RSS">INJNainggolan blog RSS</a></p>
+                        <p>&copy; 2017 <a href="/feed.xml"  title="访问 INJNainggolan blog RSS" data-hover="INJNainggolan blog RSS">INJNainggolan blog RSS</a></p>
                         <p>总计文章：{{paginator.total_posts}}篇</p>
                       <p>本blog已开源点击Fork</p><iframe src="http://ghbtns.com/github-btn.html?user=liberxue&repo=liberxue.github.io&type=fork&count=trues(添加了s  不能访问，以后会了再改)" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
                     </div>
